# despertador-melodico

./: CMakeLists.txt  README.md  build_project  key_trainer.c
.cache/clangd/index/: key_trainer.c.33976CE83491DEA0.idx  ssd1306.h.D20EA5DBD3E429B5.idx  ssd1306_font.h.C785EF9403F8B732.idx  ssd1306_i2c.c.5D42073ECF55069A.idx  ssd1306_i2c.h.2DFBCCB89E09122E.idx
